# botracers

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  IDEAS.md  README.md
.github/workflows/: publish-botracers-image.yml
bevy_vehicle_dynamics/: Cargo.toml
bevy_vehicle_dynamics/src/: debug.rs  lib.rs
bot/: Cargo.toml  link.x
bot/src/: lib.rs  main.rs
botracers-bot-sdk/: Cargo.toml
botracers-bot-sdk/src/: driving.rs  lib.rs
botracers-game/: Cargo.toml
botracers-game/src/: bootstrap.rs  devices.rs  game_api.rs  lib.rs  main.rs  race_runtime.rs  track_format.rs  ui.rs
botracers-game/src/devices/: car_controls.rs  car_radar.rs  car_state.rs
botracers-game/src/race_runtime/: car_dynamics.rs
botracers-protocol/: Cargo.toml
botracers-server/: Cargo.toml
botracers-server/src/: lib.rs  main.rs
emulator/: Cargo.toml
emulator/core/: Cargo.toml
emulator/core/src/: cpu.rs  lib.rs  main.rs
emulator/game/: Cargo.toml
emulator/game/src/: cpu.rs
emulator/racing/: Cargo.toml
emulator/racing/assets/: spielberg.toml  track1.toml
emulator/racing/src/: main.rs  track.rs  track_format.rs
emulator/src/: bevy.rs  cpu.rs  dram.rs  lib.rs  main.rs  tui.rs
emulator/src/cpu/: instruction.rs
emulator/src/tui/: widgets.rs
emulator/tui/: Cargo.toml
emulator/tui/src/: main.rs  tui.rs
emulator/tui/src/tui/: widgets.rs
game/: Cargo.toml
game/src/: main.rs
racehub/: Cargo.toml
racehub-bot-sdk/: Cargo.toml
racehub-bot-sdk/src/: driving.rs  lib.rs
racehub/src/: lib.rs
racing/: Cargo.toml
racing/src/: bot_runtime.rs  devices.rs  lib.rs  main.rs  track.rs  track_format.rs  ui.rs
scripts/: build_web.sh
vscode-extension/: README.md  package-lock.json  package.json
vscode-extension/src/: auth.ts  config.ts  extension.ts
vscode-extension/src/views/: botracersView.ts  loginWebview.ts  racehubView.ts
vscode-extension/templates/bot-starter/: Cargo.toml
