[package]
name = "botracers-game"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "botracers"
path = "src/main.rs"

[[bin]]
name = "botracers-track-editor"
path = "src/bin/editor.rs"

[dependencies]
avian2d = "0.5.0"
bevy = { version = "0.18", default-features = false, features = ["2d"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rfd = "0.15"
ehttp = { version = "0.6", features = ["json"] }
base64 = "0.22"
wasm-bindgen-futures = "0.4"

emulator = { path = "../emulator" }
botracers-protocol = { path = "../botracers-protocol" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
botracers-server = { path = "../botracers-server" }
