[package]
name = "botracers-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "botracers-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["json", "form"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
hex = "0.4"
rand = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = "0.5"
botracers-protocol = { path = "../botracers-protocol" }
urlencoding = "2"

[dev-dependencies]
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
