[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "car"
path = "src/bin/car.rs"
test = false
doctest = false
bench = false

[dependencies]
racehub-bot-sdk = { git = "https://github.com/mkreu/programming-game.git", branch = "main" }
